21.02.7/packages/arm_cortex-a9_neon/base/index.md
---
---

# [archive](/archive/) / [21.02.7](/archive/21.02.7/) / [packages](/archive/21.02.7/packages/) / [arm_cortex-a9_neon](/archive/21.02.7/packages/arm_cortex-a9_neon/) / base


| Name | Size | Date |
|:---|---:|---|
| 📁 [..](../) | | |
| 🗄️ [Packages](./Packages) | 48K | |
| 🗄️ [Packages.gz](./Packages.gz) | 16K | |
| 🗄️ [Packages.manifest](./Packages.manifest) | 64K | |
| 🗄️ [Packages.sig](./Packages.sig) | 4.0K | |
| 🗄️ [ar3k-firmware_20211216-1_arm_cortex-a9_neon.ipk](./ar3k-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 760K | |
| 🗄️ [ath9k-htc-firmware_20211216-1_arm_cortex-a9_neon.ipk](./ath9k-htc-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 64K | |
| 🗄️ [b43legacy-firmware_3.130.20.0-1_arm_cortex-a9_neon.ipk](./b43legacy-firmware_3.130.20.0-1_arm_cortex-a9_neon.ipk) | 20K | |
| 🗄️ [blkid_2.36.1-2_arm_cortex-a9_neon.ipk](./blkid_2.36.1-2_arm_cortex-a9_neon.ipk) | 40K | |
| 🗄️ [bnx2-firmware_20211216-1_arm_cortex-a9_neon.ipk](./bnx2-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 692K | |
| 🗄️ [bnx2x-firmware_20211216-1_arm_cortex-a9_neon.ipk](./bnx2x-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 9.3M | |
| 🗄️ [brcmfmac-firmware-usb_20211216-1_arm_cortex-a9_neon.ipk](./brcmfmac-firmware-usb_20211216-1_arm_cortex-a9_neon.ipk) | 492K | |
| 🗄️ [busybox_1.33.2-2_arm_cortex-a9_neon.ipk](./busybox_1.33.2-2_arm_cortex-a9_neon.ipk) | 232K | |
| 🗄️ [ca-bundle_20211016-1_all.ipk](./ca-bundle_20211016-1_all.ipk) | 112K | |
| 🗄️ [ca-certificates_20211016-1_all.ipk](./ca-certificates_20211016-1_all.ipk) | 124K | |
| 🗄️ [carl9170-firmware_20211216-1_arm_cortex-a9_neon.ipk](./carl9170-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [chat_2.4.8.git-2020-10-03-3_arm_cortex-a9_neon.ipk](./chat_2.4.8.git-2020-10-03-3_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [dnsmasq_2.85-9_arm_cortex-a9_neon.ipk](./dnsmasq_2.85-9_arm_cortex-a9_neon.ipk) | 128K | |
| 🗄️ [e100-firmware_20211216-1_arm_cortex-a9_neon.ipk](./e100-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 4.0K | |
| 🗄️ [e2fsprogs_1.45.6-2_arm_cortex-a9_neon.ipk](./e2fsprogs_1.45.6-2_arm_cortex-a9_neon.ipk) | 180K | |
| 🗄️ [edgeport-firmware_20211216-1_arm_cortex-a9_neon.ipk](./edgeport-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 20K | |
| 🗄️ [firewall_2021-03-23-61db17ed-1.1_arm_cortex-a9_neon.ipk](./firewall_2021-03-23-61db17ed-1.1_arm_cortex-a9_neon.ipk) | 48K | |
| 🗄️ [getrandom_2020-10-25-9ef88681-2_arm_cortex-a9_neon.ipk](./getrandom_2020-10-25-9ef88681-2_arm_cortex-a9_neon.ipk) | 4.0K | |
| 🗄️ [hostapd-common_2020-06-08-5a8b3662-41_arm_cortex-a9_neon.ipk](./hostapd-common_2020-06-08-5a8b3662-41_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [hostapd_2020-06-08-5a8b3662-41_arm_cortex-a9_neon.ipk](./hostapd_2020-06-08-5a8b3662-41_arm_cortex-a9_neon.ipk) | 364K | |
| 🗄️ [ip-tiny_5.11.0-3_arm_cortex-a9_neon.ipk](./ip-tiny_5.11.0-3_arm_cortex-a9_neon.ipk) | 140K | |
| 🗄️ [iw_5.9-8fab0c9e-3_arm_cortex-a9_neon.ipk](./iw_5.9-8fab0c9e-3_arm_cortex-a9_neon.ipk) | 48K | |
| 🗄️ [iwl3945-firmware_20211216-1_arm_cortex-a9_neon.ipk](./iwl3945-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 64K | |
| 🗄️ [iwl4965-firmware_20211216-1_arm_cortex-a9_neon.ipk](./iwl4965-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 80K | |
| 🗄️ [jntools_0.11-2_arm_cortex-a9_neon.ipk](./jntools_0.11-2_arm_cortex-a9_neon.ipk) | 28K | |
| 🗄️ [jshn_2021-05-16-b14c4688-2_arm_cortex-a9_neon.ipk](./jshn_2021-05-16-b14c4688-2_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [jsonfilter_2018-02-04-c7e938d6-1_arm_cortex-a9_neon.ipk](./jsonfilter_2018-02-04-c7e938d6-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [kobs-ng_5.4-1_arm_cortex-a9_neon.ipk](./kobs-ng_5.4-1_arm_cortex-a9_neon.ipk) | 88K | |
| 🗄️ [libblkid1_2.36.1-2_arm_cortex-a9_neon.ipk](./libblkid1_2.36.1-2_arm_cortex-a9_neon.ipk) | 120K | |
| 🗄️ [libblobmsg-json20210516_2021-05-16-b14c4688-2_arm_cortex-a9_neon.ipk](./libblobmsg-json20210516_2021-05-16-b14c4688-2_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [libbz2-1.0_1.0.8-1_arm_cortex-a9_neon.ipk](./libbz2-1.0_1.0.8-1_arm_cortex-a9_neon.ipk) | 28K | |
| 🗄️ [libcomerr0_1.45.6-2_arm_cortex-a9_neon.ipk](./libcomerr0_1.45.6-2_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [libertas-sdio-firmware_20211216-1_arm_cortex-a9_neon.ipk](./libertas-sdio-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 344K | |
| 🗄️ [libertas-spi-firmware_20211216-1_arm_cortex-a9_neon.ipk](./libertas-spi-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 92K | |
| 🗄️ [libertas-usb-firmware_20211216-1_arm_cortex-a9_neon.ipk](./libertas-usb-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 216K | |
| 🗄️ [libext2fs2_1.45.6-2_arm_cortex-a9_neon.ipk](./libext2fs2_1.45.6-2_arm_cortex-a9_neon.ipk) | 164K | |
| 🗄️ [libf2fs6_1.14.0-1_arm_cortex-a9_neon.ipk](./libf2fs6_1.14.0-1_arm_cortex-a9_neon.ipk) | 44K | |
| 🗄️ [libiwinfo-data_2022-08-19-0dad3e66-1_arm_cortex-a9_neon.ipk](./libiwinfo-data_2022-08-19-0dad3e66-1_arm_cortex-a9_neon.ipk) | 4.0K | |
| 🗄️ [libiwinfo-lua_2022-08-19-0dad3e66-1_arm_cortex-a9_neon.ipk](./libiwinfo-lua_2022-08-19-0dad3e66-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [libiwinfo20210430_2022-08-19-0dad3e66-1_arm_cortex-a9_neon.ipk](./libiwinfo20210430_2022-08-19-0dad3e66-1_arm_cortex-a9_neon.ipk) | 28K | |
| 🗄️ [libjson-c5_0.15-2_arm_cortex-a9_neon.ipk](./libjson-c5_0.15-2_arm_cortex-a9_neon.ipk) | 24K | |
| 🗄️ [libjson-script20210516_2021-05-16-b14c4688-2_arm_cortex-a9_neon.ipk](./libjson-script20210516_2021-05-16-b14c4688-2_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [libltdl7_2.4.6-2_arm_cortex-a9_neon.ipk](./libltdl7_2.4.6-2_arm_cortex-a9_neon.ipk) | 16K | |
| 🗄️ [liblua5.1.5_5.1.5-9_arm_cortex-a9_neon.ipk](./liblua5.1.5_5.1.5-9_arm_cortex-a9_neon.ipk) | 60K | |
| 🗄️ [libmbedtls12_2.16.12-1_arm_cortex-a9_neon.ipk](./libmbedtls12_2.16.12-1_arm_cortex-a9_neon.ipk) | 164K | |
| 🗄️ [libncurses6_6.2-3_arm_cortex-a9_neon.ipk](./libncurses6_6.2-3_arm_cortex-a9_neon.ipk) | 152K | |
| 🗄️ [libnl-tiny1_2020-08-05-c291088f-2_arm_cortex-a9_neon.ipk](./libnl-tiny1_2020-08-05-c291088f-2_arm_cortex-a9_neon.ipk) | 16K | |
| 🗄️ [libopenssl1.1_1.1.1t-2_arm_cortex-a9_neon.ipk](./libopenssl1.1_1.1.1t-2_arm_cortex-a9_neon.ipk) | 1.1M | |
| 🗄️ [libreadline8_8.1-1_arm_cortex-a9_neon.ipk](./libreadline8_8.1-1_arm_cortex-a9_neon.ipk) | 124K | |
| 🗄️ [libss2_1.45.6-2_arm_cortex-a9_neon.ipk](./libss2_1.45.6-2_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [libubox20210516_2021-05-16-b14c4688-2_arm_cortex-a9_neon.ipk](./libubox20210516_2021-05-16-b14c4688-2_arm_cortex-a9_neon.ipk) | 20K | |
| 🗄️ [libubus-lua_2021-06-30-4fc532c8-2_arm_cortex-a9_neon.ipk](./libubus-lua_2021-06-30-4fc532c8-2_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [libubus20210630_2021-06-30-4fc532c8-2_arm_cortex-a9_neon.ipk](./libubus20210630_2021-06-30-4fc532c8-2_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [libuci20130104_2021-04-14-4b3db117-5_arm_cortex-a9_neon.ipk](./libuci20130104_2021-04-14-4b3db117-5_arm_cortex-a9_neon.ipk) | 16K | |
| 🗄️ [libuclient20201210_2023-04-13-007d9454-1_arm_cortex-a9_neon.ipk](./libuclient20201210_2023-04-13-007d9454-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [libustream-wolfssl20201210_2022-01-16-868fd881-2_arm_cortex-a9_neon.ipk](./libustream-wolfssl20201210_2022-01-16-868fd881-2_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [libuuid1_2.36.1-2_arm_cortex-a9_neon.ipk](./libuuid1_2.36.1-2_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [libwolfssl5.5.3.99a5b54a_5.5.3-stable-1_arm_cortex-a9_neon.ipk](./libwolfssl5.5.3.99a5b54a_5.5.3-stable-1_arm_cortex-a9_neon.ipk) | 464K | |
| 🗄️ [logd_2020-10-25-9ef88681-2_arm_cortex-a9_neon.ipk](./logd_2020-10-25-9ef88681-2_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [lua_5.1.5-9_arm_cortex-a9_neon.ipk](./lua_5.1.5-9_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [luci-app-jntools_git-23.118.45657-a69bf87_all.ipk](./luci-app-jntools_git-23.118.45657-a69bf87_all.ipk) | 4.0K | |
| 🗄️ [lumimqttd_0.2.10-1_arm_cortex-a9_neon.ipk](./lumimqttd_0.2.10-1_arm_cortex-a9_neon.ipk) | 28K | |
| 🗄️ [lumimqttd_0.2.11-1_arm_cortex-a9_neon.ipk](./lumimqttd_0.2.11-1_arm_cortex-a9_neon.ipk) | 28K | |
| 🗄️ [memtool_1-1_arm_cortex-a9_neon.ipk](./memtool_1-1_arm_cortex-a9_neon.ipk) | 4.0K | |
| 🗄️ [mkf2fs_1.14.0-1_arm_cortex-a9_neon.ipk](./mkf2fs_1.14.0-1_arm_cortex-a9_neon.ipk) | 20K | |
| 🗄️ [mt7601u-firmware_20211216-1_arm_cortex-a9_neon.ipk](./mt7601u-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 28K | |
| 🗄️ [mwifiex-pcie-firmware_20211216-1_arm_cortex-a9_neon.ipk](./mwifiex-pcie-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 504K | |
| 🗄️ [mwifiex-sdio-firmware_20211216-1_arm_cortex-a9_neon.ipk](./mwifiex-sdio-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 860K | |
| 🗄️ [mwl8k-firmware_20211216-1_arm_cortex-a9_neon.ipk](./mwl8k-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 192K | |
| 🗄️ [netifd_2021-10-30-8f82742c-1_arm_cortex-a9_neon.ipk](./netifd_2021-10-30-8f82742c-1_arm_cortex-a9_neon.ipk) | 88K | |
| 🗄️ [odhcp6c_2021-01-09-53f07e90-16_arm_cortex-a9_neon.ipk](./odhcp6c_2021-01-09-53f07e90-16_arm_cortex-a9_neon.ipk) | 28K | |
| 🗄️ [odhcpd-ipv6only_2021-07-18-bc9d317f-3_arm_cortex-a9_neon.ipk](./odhcpd-ipv6only_2021-07-18-bc9d317f-3_arm_cortex-a9_neon.ipk) | 40K | |
| 🗄️ [openwrt-keyring_2021-02-20-49283916-2_arm_cortex-a9_neon.ipk](./openwrt-keyring_2021-02-20-49283916-2_arm_cortex-a9_neon.ipk) | 4.0K | |
| 🗄️ [opkg_2021-06-13-1bf042dd-2_arm_cortex-a9_neon.ipk](./opkg_2021-06-13-1bf042dd-2_arm_cortex-a9_neon.ipk) | 68K | |
| 🗄️ [p54-pci-firmware_1_arm_cortex-a9_neon.ipk](./p54-pci-firmware_1_arm_cortex-a9_neon.ipk) | 24K | |
| 🗄️ [p54-usb-firmware_1_arm_cortex-a9_neon.ipk](./p54-usb-firmware_1_arm_cortex-a9_neon.ipk) | 24K | |
| 🗄️ [ppp-mod-pppoe_2.4.8.git-2020-10-03-3_arm_cortex-a9_neon.ipk](./ppp-mod-pppoe_2.4.8.git-2020-10-03-3_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [ppp_2.4.8.git-2020-10-03-3_arm_cortex-a9_neon.ipk](./ppp_2.4.8.git-2020-10-03-3_arm_cortex-a9_neon.ipk) | 120K | |
| 🗄️ [prism54-firmware_1_arm_cortex-a9_neon.ipk](./prism54-firmware_1_arm_cortex-a9_neon.ipk) | 80K | |
| 🗄️ [procd_2021-03-08-2cfc26f8-2_arm_cortex-a9_neon.ipk](./procd_2021-03-08-2cfc26f8-2_arm_cortex-a9_neon.ipk) | 52K | |
| 🗄️ [r8169-firmware_20211216-1_arm_cortex-a9_neon.ipk](./r8169-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 36K | |
| 🗄️ [rpcd-mod-file_2022-02-19-8d26a1ba-1_arm_cortex-a9_neon.ipk](./rpcd-mod-file_2022-02-19-8d26a1ba-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [rpcd-mod-iwinfo_2022-02-19-8d26a1ba-1_arm_cortex-a9_neon.ipk](./rpcd-mod-iwinfo_2022-02-19-8d26a1ba-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [rpcd_2022-02-19-8d26a1ba-1_arm_cortex-a9_neon.ipk](./rpcd_2022-02-19-8d26a1ba-1_arm_cortex-a9_neon.ipk) | 24K | |
| 🗄️ [rs9113-firmware_20211216-1_arm_cortex-a9_neon.ipk](./rs9113-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 84K | |
| 🗄️ [rt2800-pci-firmware_20211216-1_arm_cortex-a9_neon.ipk](./rt2800-pci-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [rt2800-usb-firmware_20211216-1_arm_cortex-a9_neon.ipk](./rt2800-usb-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 4.0K | |
| 🗄️ [rt61-pci-firmware_20211216-1_arm_cortex-a9_neon.ipk](./rt61-pci-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [rt73-usb-firmware_20211216-1_arm_cortex-a9_neon.ipk](./rt73-usb-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 4.0K | |
| 🗄️ [rtk_hciattach_20201020-1_arm_cortex-a9_neon.ipk](./rtk_hciattach_20201020-1_arm_cortex-a9_neon.ipk) | 44K | |
| 🗄️ [rtl8192ce-firmware_20211216-1_arm_cortex-a9_neon.ipk](./rtl8192ce-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 24K | |
| 🗄️ [rtl8192cu-firmware_20211216-1_arm_cortex-a9_neon.ipk](./rtl8192cu-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 20K | |
| 🗄️ [rtl8192de-firmware_20211216-1_arm_cortex-a9_neon.ipk](./rtl8192de-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 16K | |
| 🗄️ [rtl8192se-firmware_20211216-1_arm_cortex-a9_neon.ipk](./rtl8192se-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 40K | |
| 🗄️ [rtl8192su-firmware_20211216-1_arm_cortex-a9_neon.ipk](./rtl8192su-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 64K | |
| 🗄️ [rtl8821ae-firmware_20211216-1_arm_cortex-a9_neon.ipk](./rtl8821ae-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 28K | |
| 🗄️ [spidev-test_5.4.238-5.4.238_arm_cortex-a9_neon.ipk](./spidev-test_5.4.238-5.4.238_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [terminfo_6.2-3_arm_cortex-a9_neon.ipk](./terminfo_6.2-3_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [ubox_2020-10-25-9ef88681-2_arm_cortex-a9_neon.ipk](./ubox_2020-10-25-9ef88681-2_arm_cortex-a9_neon.ipk) | 16K | |
| 🗄️ [ubus_2021-06-30-4fc532c8-2_arm_cortex-a9_neon.ipk](./ubus_2021-06-30-4fc532c8-2_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [ubusd_2021-06-30-4fc532c8-2_arm_cortex-a9_neon.ipk](./ubusd_2021-06-30-4fc532c8-2_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [uci_2021-04-14-4b3db117-5_arm_cortex-a9_neon.ipk](./uci_2021-04-14-4b3db117-5_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [uclient-fetch_2023-04-13-007d9454-1_arm_cortex-a9_neon.ipk](./uclient-fetch_2023-04-13-007d9454-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [uhttpd-mod-ubus_2021-03-21-15346de8-2_arm_cortex-a9_neon.ipk](./uhttpd-mod-ubus_2021-03-21-15346de8-2_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [uhttpd_2021-03-21-15346de8-2_arm_cortex-a9_neon.ipk](./uhttpd_2021-03-21-15346de8-2_arm_cortex-a9_neon.ipk) | 28K | |
| 🗄️ [urandom-seed_3_arm_cortex-a9_neon.ipk](./urandom-seed_3_arm_cortex-a9_neon.ipk) | 4.0K | |
| 🗄️ [urngd_2020-01-21-c7f7b6b6-1_arm_cortex-a9_neon.ipk](./urngd_2020-01-21-c7f7b6b6-1_arm_cortex-a9_neon.ipk) | 8.0K | |
| 🗄️ [usign_2020-05-23-f1f65026-1_arm_cortex-a9_neon.ipk](./usign_2020-05-23-f1f65026-1_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [wil6210-firmware_20211216-1_arm_cortex-a9_neon.ipk](./wil6210-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 252K | |
| 🗄️ [wireless-regdb_2022.08.12-1_all.ipk](./wireless-regdb_2022.08.12-1_all.ipk) | 4.0K | |
| 🗄️ [wl12xx-firmware_20211216-1_arm_cortex-a9_neon.ipk](./wl12xx-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 1.2M | |
| 🗄️ [wl18xx-firmware_20211216-1_arm_cortex-a9_neon.ipk](./wl18xx-firmware_20211216-1_arm_cortex-a9_neon.ipk) | 336K | |
| 🗄️ [wpa-supplicant_2020-06-08-5a8b3662-41_arm_cortex-a9_neon.ipk](./wpa-supplicant_2020-06-08-5a8b3662-41_arm_cortex-a9_neon.ipk) | 372K | |
| 🗄️ [wwan_2019-04-29-5_arm_cortex-a9_neon.ipk](./wwan_2019-04-29-5_arm_cortex-a9_neon.ipk) | 12K | |
| 🗄️ [zlib_1.2.11-6_arm_cortex-a9_neon.ipk](./zlib_1.2.11-6_arm_cortex-a9_neon.ipk) | 44K | |

